@@ -56,6 +56,44 @@ testLookup1D ()
 
 
 void
+testLookupPairs1D ()
+{
+    print ("Testing 1D table lookups with pairs\n");
+
+    float f[][2] = {{1, 2}};
+
+    assert (lookupPairs1D (f, 0.0) == 2.0);
+    assert (lookupPairs1D (f, 1.0) == 2.0);
+    assert (lookupPairs1D (f, 2.0) == 2.0);
+
+    float g[][2] = {{1, 2}, {3, 4}};
+
+    assert (lookupPairs1D (g, 0.0) == 2.0);
+    assert (lookupPairs1D (g, 1.0) == 2.0);
+    assert (lookupPairs1D (g, 2.0) == 3.0);
+    assert (lookupPairs1D (g, 3.0) == 4.0);
+    assert (lookupPairs1D (g, 4.0) == 4.0);
+
+    float h[][2] = {{1, 2}, {3, 4}, {4, 5}, {4, 5}, {8, 7}};
+
+    assert (lookupPairs1D (h, 0.0) == 2.0);
+    assert (lookupPairs1D (h, 1.0) == 2.0);
+    assert (lookupPairs1D (h, 1.5) == 2.5);
+    assert (lookupPairs1D (h, 2.0) == 3.0);
+    assert (lookupPairs1D (h, 2.5) == 3.5);
+    assert (lookupPairs1D (h, 3.0) == 4.0);
+    assert (lookupPairs1D (h, 4.0) == 5.0);
+    assert (lookupPairs1D (h, 5.0) == 5.5);
+    assert (lookupPairs1D (h, 6.0) == 6.0);
+    assert (lookupPairs1D (h, 7.0) == 6.5);
+    assert (lookupPairs1D (h, 8.0) == 7.0);
+    assert (lookupPairs1D (h, 9.0) == 7.0);
+
+    print ("ok\n");
+}
+
+
+void
 testLookup3D ()
 {
     print ("Testing 3D table lookups\n");
@@ -180,6 +218,7 @@ int
 testLookupTables ()
 {
     testLookup1D();
+    testLookupPairs1D();
     testLookup3D();
     return 0;
 }
