@@ -1,5 +1,8 @@
-	* Added support for 3x3 matices to the standard library,
-	  added matrix transposition functions (Florian Kainz)
+	* Added new functions to the standard library:
+	    3x3 matrix multiplication, addition and inversion
+	    3x3 and 4x4 matrix transposition
+	    1D lookup table with explicit x,y pairs
+	  (Florian Kainz)
 	* Added new ctlversion statement (Florian Kainz)
 
 Version 1.2.1:
